--- a/MyTrade/Views/Admin/KYCUpdateDeatilsOfUser.cshtml
+++ b/MyTrade/Views/Admin/KYCUpdateDeatilsOfUser.cshtml
@@ -94,11 +94,17 @@
                                                     <td>
                                                         <a href="/AdminReports/ViewProfile?Id=@Item.Fk_UserId" class="btn btn-info btn-sm">View</a>
                                                     </td>
-                                                    @if (Item.IsVerified == "False")
+                                                    @if (Item.IsVerified == "False" && Item.Status!="Declined")
                                                     {
                                                         <td>
                                                             <a href="/AdminReports/ViewProfileVeriFy?Id=@Item.Fk_UserId" name="Verify" id="Verify" class="btn btn-success">Verify</a>
                                                             <a href="/AdminReports/DeclineKyc?Id=@Item.Fk_UserId" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to decline this kyc?')">Decline</a>
+                                                        </td>
+                                                    }
+                                                    else if (Item.Status == "Declined")
+                                                    {
+                                                        <td>
+                                                            <span>Declined</span>
                                                         </td>
                                                     }
                                                     else
@@ -126,7 +132,6 @@
                                     }
                                 </tbody>
                             </table>
-                       
                     </div>
                 </div>
             </div>
