--- a/MyTrade/Views/Report/PayoutWalletLedger.cshtml
+++ b/MyTrade/Views/Report/PayoutWalletLedger.cshtml
@@ -86,10 +86,10 @@
 <script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
 <script>
     var f3 = flatpickr(document.getElementById('FromDate'), {
-        mode: "range"
+       // mode: "range"
     });
     var f4 = flatpickr(document.getElementById('ToDate'), {
-        mode: "range"
+     //   mode: "range"
     });
 </script>
 
