--- a/MyTrade/Views/Home/Registration.cshtml
+++ b/MyTrade/Views/Home/Registration.cshtml
@@ -49,6 +49,35 @@
                 border-radius: 8px;
             }
         }
+
+
+
+
+           #preloader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #FFF; /* change if the mask should have another color then white */
+            z-index: 99999; /* makes sure it stays on top */
+        }
+
+
+          #status {
+            width: 100px;
+            height: 100px;
+            position: absolute;
+            left: 50%; /* centers the loading animation horizontally one the screen */
+            top: 50%; /* centers the loading animation vertically one the screen */
+            background-image: url("../imgs/loader.gif");
+            z-index: 9999; /* path to your loading animation */
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            margin: -50px 0 0 -50px; /* is width and height divided by two */
+        }
+
     </style>
 </head>
 <body>
@@ -307,6 +336,7 @@
         }
         function saveregistration() {
             $('#Register').attr("disabled", "disabled");
+
             $("#divload").css({ 'display': '' });
             var Leg = "";
             if ($('#left').prop('checked')) {
