--- a/MyTrade/Views/Home/Login.cshtml
+++ b/MyTrade/Views/Home/Login.cshtml
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="~/MyTradeWebsite/assets/css/style.css">
     <link rel="stylesheet" href="~/MyTradeWebsite/assets/css/responsive.css">
 
-    <title>My Trade</title>
+    <title>Brain Stew Clowd</title>
 
     <link rel="icon" type="image/png" href="~/MytradeWebsite/assets/img/favicon.png">
 </head>
