--- a/MyTrade/Views/Home/CompleteRegistration.cshtml
+++ b/MyTrade/Views/Home/CompleteRegistration.cshtml
@@ -72,44 +72,64 @@
             <div class="card-body my-2">
                 <h5 class="card-title my-2">Please Select For  Activate Your Profile.</h5>
                 <div class="d-flex justify-content-around mt-5">
-
-                    @if (ViewBag.PaymentType == "Offline" && ViewBag.IsActive=="True")
+                    @if (Model != null)
                     {
-                        <div class="field-wrapper">
+                        if (Model.lstBannerImage != null)
+                        {
+                            int i = 1;
+                            foreach (var Item in Model.lstBannerImage)
+                            {
+                                if (Item.PaymentType == "Offline" && Item.IsActive == "True")
+                                {
+                                    <div class="field-wrapper">
+                                        <a href="/User/ActivateByPin" class="mr-2 btn btn-primary chaining-modals foractivation-btn py-2">
+                                            <div class="img-design"><img src="~/assets/img/pin.png" style="width:50px" /></div> <br />
+                                            <span style="white-space: nowrap">Activate By Pin</span>
+                                        </a>
+                                    </div>
+                                }
+                                else if (Item.PaymentType == "Online" && Item.IsActive == "True")
+                                {
+
+                                    <div class="field-wrapper">
+                                        <a href="/Home/ActivateByPayment" target="_blank" class="btn btn-info foractivation-btn py-2" data-toggle="modal" data-target="#myModal">
+                                            <div class="img-design"><img src="~/assets/img/payment.png" style="width:50px" /></div> <br />
+                                            <span style="white-space: nowrap">Activate By Payment</span>
+                                        </a>
+                                    </div>
+                                }
+                                else if (Item.PaymentType == "Online" && Item.IsActive == "True" && Item.PaymentType == "Offline" && Item.IsActive == "True")
+                                {
+
+                                    <div class="field-wrapper">
+                                        <a href="/Home/ActivateByPayment" target="_blank" class="btn btn-info foractivation-btn py-2" data-toggle="modal" data-target="#myModal">
+                                            <div class="img-design"><img src="~/assets/img/payment.png" style="width:50px" /></div> <br />
+                                            <span style="white-space: nowrap">Activate By Payment</span>
+                                        </a>
+                                    </div>
+                                }
+                                else
+                                {
+
+                                }
+                            }
+                        }
+                    }
+
+
+                    @*<div class="field-wrapper">
                             <a href="/User/ActivateByPin" class="mr-2 btn btn-primary chaining-modals foractivation-btn py-2">
                                 <div class="img-design"><img src="~/assets/img/pin.png" style="width:50px" /></div> <br />
                                 <span style="white-space: nowrap">Activate By Pin</span>
                             </a>
                         </div>
-                    }
-                    else if(ViewBag.PaymentType == "Online" && ViewBag.IsActive == "True")
-                    {
 
                         <div class="field-wrapper">
                             <a href="/Home/ActivateByPayment" target="_blank" class="btn btn-info foractivation-btn py-2" data-toggle="modal" data-target="#myModal">
                                 <div class="img-design"><img src="~/assets/img/payment.png" style="width:50px" /></div> <br />
                                 <span style="white-space: nowrap">Activate By Payment</span>
                             </a>
-                        </div>
-                    }
-                    else
-                    {
-
-                    }
-
-                    @*<div class="field-wrapper">
-                        <a href="/User/ActivateByPin" class="mr-2 btn btn-primary chaining-modals foractivation-btn py-2">
-                            <div class="img-design"><img src="~/assets/img/pin.png" style="width:50px" /></div> <br />
-                            <span style="white-space: nowrap">Activate By Pin</span>
-                        </a>
-                    </div>
-
-                    <div class="field-wrapper">
-                        <a href="/Home/ActivateByPayment" target="_blank" class="btn btn-info foractivation-btn py-2" data-toggle="modal" data-target="#myModal">
-                            <div class="img-design"><img src="~/assets/img/payment.png" style="width:50px" /></div> <br />
-                            <span style="white-space: nowrap">Activate By Payment</span>
-                        </a>
-                    </div>*@
+                        </div>*@
 
                     @using (Html.BeginForm("CompleteRegistration", "Home", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
                     {
@@ -149,7 +169,7 @@
     </div>
 
     <!-- BEGIN GLOBAL MANDATORY SCRIPTS -->
-  
+
     <script src="~/assets/js/libs/jquery-3.1.1.min.js"></script>
     <script src="~/bootstrap/js/popper.min.js"></script>
     <script src="~/bootstrap/js/bootstrap.min.js"></script>
@@ -176,27 +196,27 @@
     @if (TempData["msg"] != null)
     {
         <script>
-        $(document).ready(function () {
-            Snackbar.show({
-                text: '@TempData["msg"]',
-                actionTextColor: '#fff',
-                backgroundColor: '#1abc9c',
-                pos: 'top-right'
+            $(document).ready(function () {
+                Snackbar.show({
+                    text: '@TempData["msg"]',
+                    actionTextColor: '#fff',
+                    backgroundColor: '#1abc9c',
+                    pos: 'top-right'
+                });
             });
-        });
         </script>
     }
     @if (TempData["error"] != null)
     {
         <script>
-        $(document).ready(function () {
-            Snackbar.show({
-                text: '@TempData["error"]',
-                actionTextColor: '#fff',
-                backgroundColor: '#e7515a',
-                pos: 'top-right'
+            $(document).ready(function () {
+                Snackbar.show({
+                    text: '@TempData["error"]',
+                    actionTextColor: '#fff',
+                    backgroundColor: '#e7515a',
+                    pos: 'top-right'
+                });
             });
-        });
         </script>
     }
     <!-- END GLOBAL MANDATORY SCRIPTS -->
